# wrapprotocol

./: .env.example  .gitignore  MIDE-FRONTEND.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
contracts/evm/: .env.example  CHAIN_DEPLOY.md  foundry.toml
contracts/evm/script/: Deploy.s.sol
contracts/evm/src/: MorkAirdrop.sol  MorkToken.sol
contracts/evm/test/: MorkToken.t.sol
contracts/solana/: Cargo.toml
contracts/solana/programs/mork-airdrop/: Cargo.toml
contracts/solana/programs/mork-airdrop/src/: lib.rs
indexer/: evm-indexer.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/components/providers/: SolanaProvider.tsx  SupabaseProvider.tsx  WagmiProvider.tsx  Web3Providers.tsx
src/components/ui/: ChainClaimPanel.tsx  ClaimButton.tsx  ClaimHistory.tsx  ClaimNowButton.tsx  ClaimStatus.tsx  ConnectOrMessage.tsx  DashboardHeader.tsx  DashboardSidebar.tsx  EmailSignIn.tsx  FeedbackSection.tsx  Footer.tsx  HeroActions.tsx  HeroCTA.tsx  LandingCTAs.tsx  LinkWalletButton.tsx  LiveClaimFeed.tsx  LiveClaimToast.tsx  ManualWalletConnect.tsx  ManualWalletConnectWrapper.tsx  Navbar.tsx  SolanaClaimButton.tsx  StatsBar.tsx  TokenSelector.tsx  WalletConnectSection.tsx  WalletConnectSectionWrapper.tsx  WalletConnectToast.tsx  WalletInfo.tsx  WalletModal.tsx
src/lib/: abi.ts  chainConfig.ts  constants.ts
src/lib/hooks/: useMultiTokenClaim.ts
src/lib/solana/: idl.ts  useSolanaClaim.ts
src/lib/supabase/: client.ts  server.ts  (+1 more)
supabase/: schema.sql  stats-cron.sql
(+13 files in other folders)
