[package]
name = "mork-airdrop"
version = "0.1.0"
description = "Mork Airdrop — Solana Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mork_airdrop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1", features = ["token"] }
